welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.error
parotTrouble:18: error: type mismatch;
 found   : Unit
 required: Boolean
       	            if(talking==false && hour<7)
                    ^